tests/baselines/reference/YieldExpression8.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression8.ts(1,1): error TS2304: Cannot find name 'yield'.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression8.ts (1 errors) ====
    yield(foo);
    ~~~~~
!!! error TS2304: Cannot find name 'yield'.
    function* foo() {
      yield(foo);
    }